# pipedcp

./: CMakeLists.txt  Makefile  README.md  docker-compose.sh  docker-compose.yml
include/pipedcp/: process.h
src/pipedcp/: process.cpp
test/: process_test.cpp
test/assets/: read-echo.sh
